# university_sqlalchemy_alembic

./: README.md  my_select.py  pyproject.toml  schema.py  seed.py
alembic/versions/: 4a069a66315d_revision_create_groups_table.py  5dd3512f64d3_revision_create_score_records_table.py  a409b6fa35f2_revision_create_students_table.py  a7c53da6c43f_revision_create_subjects_table.py  e1606a2b7a4e_revision_create_professors_table.py
