[tool.poetry]
name = "6- sql"
version = "0.1.0"
description = ""
authors = ["baskina <katyabaskina@gmail.com>"]
readme = "README.md"
packages = [{include = "6"}]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
faker = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

